# nu-quran-django

./: .gitignore  Dockerfile  MANIFEST.in  README.md  devenv.nix  pyproject.toml
.github/workflows/: pr-checks.yml  publish.yml  release.yml
src/: manage.py
src/nu_quran_api/: asgi.py  urls.py  wsgi.py
src/nu_quran_api/apps/goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/nu_quran_api/apps/users/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/nu_quran_api/apps/users/fixtures/: category.json  roles.json
src/nu_quran_api/apps/users/management/commands/: setuproles.py
src/nu_quran_api/apps/users/migrations/: 0001_initial.py  0002_alter_category_options.py
src/nu_quran_api/apps/v1/goals/: apps.py  permissions.py  views.py
src/nu_quran_api/apps/v1/goals/migrations/: 0001_initial.py  0002_alter_goal_created_at.py
src/nu_quran_api/apps/v1/users/: apps.py  filters.py  serializers.py  views.py
src/nu_quran_api/apps/v1/users/fixtures/: category.json
src/nu_quran_api/apps/v1/users/management/commands/: setuproles.py
src/nu_quran_api/apps/v1/users/migrations/: 0001_initial.py  0002_alter_category_options.py  0002_seed_categories.py  0003_alter_category_options.py
src/nu_quran_api/cli/: server.py
src/nu_quran_api/server/: main.py
src/nu_quran_api/settings/: base.py  env.py
src/tests/: conftest.py
tests/: conftest.py  test_views.py
tests/apps/: api_client.py  conftest.py
tests/apps/goals/: conftest.py  test_views.py
tests/apps/users/: conftest.py  test_views.py
tests/apps/v1/: conftest.py
tests/apps/v1/goals/: conftest.py  test_views.py
tests/apps/v1/users/: conftest.py  test_views.py
tests/tests/: test_views.py
