[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nu-quran-api"
dynamic = ["version"]
license = "GPL-3.0-or-later"
description = "NU Quran Community platform backend API"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Framework :: Django",
]
requires-python = ">= 3.13"
dependencies = [
  "django",
  "django-stubs",
  "django-filter",
  "django-cors-headers",
  "psycopg2-binary",
  "djangorestframework",
  "djangorestframework-stubs",
  "djangorestframework-simplejwt",
  "drf-spectacular",
  "python-dotenv",
  "uvicorn",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-django"]

[project.scripts]
nu-quran = "nu_quran_api.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nu_quran_api.settings"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
