[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nu-quran-api"
dynamic = ["version"]
license = "GPL-3.0-or-later"
description = "NU Quran Community platform backend API"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Framework :: Django",
]
requires-python = ">= 3.13"
dependencies = [
  "django~=6.0",
  "django-stubs~=5.2",
  "django-filter~=25.2",
  "django-cors-headers~=4.9",
  "psycopg2-binary~=2.9",
  "djangorestframework~=3.16",
  "djangorestframework-stubs~=3.16",
  "djangorestframework-simplejwt~=5.5",
  "drf-spectacular~=0.29",
  "python-dotenv~=1.2",
  "uvicorn~=0.40",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-django"]

[project.scripts]
nu-quran = "nu_quran_api.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.ruff.lint]
ignore = ["F403"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nu_quran_api.settings"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
